# open-cradle

./: .gitattributes  .gitignore  CMakeLists.txt  License.txt  README.md
alia_demo/: CMakeLists.txt  alia.style
alia_demo/src/: containers.cpp  layout.cpp  main.cpp  timing.cpp  tutorial.cpp  utilities.cpp  utilities.hpp  widgets.cpp
analysis/: CMakeLists.txt  alia.style  analysis_generate_api.cpp  analysis_ui.cpp
analysis/src/analysis/: common.hpp  manifest.hpp  release.hpp  session.hpp
analysis/src/analysis/ui/: app_context.cpp  app_context.hpp  common.hpp  registry.cpp  registry.hpp
analysis/src/analysis/ui/controls/: common_controls.cpp  common_controls.hpp
cradle/: CMakeLists.txt  Dockerfile_base  build.sh  generate_api.cpp  init.sh
cradle/catch_unit_tests/: catch_test_cradle_geometry.cpp  catch_test_cradle_imaging.cpp  cradle_test_utilities.cpp  cradle_test_utilities.hpp
cradle/cmake/: FindClp.cmake  FindGLEW.cmake  FindGLPK.cmake  FindMsgPack.cmake  FindOpenSSL.cmake  FindPQ.cmake  FindPostgreSQL.cmake  FindSkia.cmake  UseCradle.cmake  svn.cmake
cradle/generators/: CMakeLists.txt  isobands.cpp
cradle/preprocessor/: CMakeLists.txt  blocks.ml  dependency.ml  enums.ml  functions.ml  grammar.mly  lexer.mll  main.ml  mutations.ml  provider.ml  records.ml  structures.ml  types.ml  unions.ml  utilities.ml
cradle/src/: clipper.cpp  clipper.hpp  nanosvg.h  sqlite3.c
cradle/src/cradle/: anonymous.hpp  api.cpp  api.hpp  breakpad.cpp  breakpad.hpp  common.cpp  common.hpp  composition_cache.hpp  date_time.cpp  date_time.hpp  diff.cpp  diff.hpp  disk_cache.cpp  disk_cache.hpp  encoding.cpp  encoding.hpp  endian.cpp  endian.hpp  lua.cpp  lua.hpp  pooled_list.hpp  release.hpp  simple_concurrency.cpp  simple_concurrency.hpp  system.cpp  system.hpp  test.cpp  test.hpp  thread_utilities.cpp  thread_utilities.hpp  units.hpp
cradle/src/cradle/background/: api.cpp  api.hpp  api.ipp  internals.hpp  requests.cpp  requests.hpp  system.cpp  system.hpp
cradle/src/cradle/geometry/: adaptive_grid.hpp  angle.hpp  bin_collection.hpp  clipper.cpp  clipper.hpp  common.hpp  decode_matrix.hpp  decode_matrix.ipp  distance.cpp  distance.hpp  distance.ipp  forward.hpp  grid_points.hpp  intersection.hpp  intersection.ipp  line_strip.cpp  line_strip.hpp  meshing.cpp  meshing.hpp  multiple_source_view.cpp  multiple_source_view.hpp  polygonal.cpp  polygonal.hpp  project_via_render_to_texture.cpp  project_via_render_to_texture.hpp  regular_grid.cpp  regular_grid.hpp  scenes.hpp  slicing.cpp  slicing.hpp  transformations.hpp
cradle/src/cradle/gui/: background.cpp  background.hpp  background_job_request.cpp  background_job_request.hpp  collections.hpp  common.cpp  common.hpp  generic_tasks.hpp  internals.cpp  internals.hpp  notifications.cpp  notifications.hpp  requests.cpp  requests.hpp  services.cpp  services.hpp  task_controls.cpp  task_controls.hpp  task_interface.cpp  task_interface.hpp  types.cpp  types.hpp  web_requests.cpp  web_requests.hpp  widgets.cpp  widgets.hpp
cradle/src/cradle/imaging/: api.hpp  apply_palette.hpp  binary_ops.hpp  binary_ops.ipp  blend.hpp  bounds.hpp  channel.hpp  color.cpp  color.hpp  color_map.hpp  color_map.ipp  contiguous.hpp  discretize.hpp  discretize.ipp  foreach.hpp  forward.hpp  geometry.hpp  gradient.hpp  histogram.hpp  histogram.ipp  histogram_equalize.hpp  image.cpp  image.hpp  integral.hpp  integral.ipp  isobands.cpp  isobands.hpp  isobands.ipp  isolines.cpp  isolines.hpp  isolines.ipp  iterator.hpp  level_window.cpp  level_window.hpp  level_window.ipp  merge_slices.hpp  merge_slices.ipp  sample.hpp  sample.ipp  shrink.cpp  (+14 more)
cradle/src/cradle/io/: calc_messages.cpp  calc_messages.hpp  calc_provider.cpp  calc_provider.hpp  calc_requests.cpp  calc_requests.hpp  compression.cpp  compression.hpp  config_file.cpp  config_file.hpp  crc.cpp  crc.hpp  file.cpp  file.hpp  forward.hpp  generic_io.cpp  generic_io.hpp  libpq.hpp  msgpack_io.hpp  postgresql.cpp  postgresql.hpp  raw_memory_io.cpp  raw_memory_io.hpp  standard_image_io.cpp  standard_image_io.hpp  stereolithography_io.cpp  stereolithography_io.hpp  tcp_messaging.hpp  text_parser.cpp  text_parser.hpp  vtk_io.cpp  vtk_io.hpp  web_io.cpp  web_io.hpp
cradle/src/cradle/math/: common.cpp  common.hpp  fixed.hpp  interpolate.cpp  interpolate.hpp
cradle/src/cradle/rt/: common.hpp  ct_image.hpp  dose.hpp  plan.hpp  structure_set.hpp  test_upgrades.cpp  test_upgrades.hpp  types.hpp  utilities.cpp  utilities.hpp
cradle/src/cradle/unit_tests/: testing.cpp  testing.hpp
cradle/src/json/: json_reader.cpp  json_value.cpp  json_writer.cpp  reader.h  sconscript  value.h
cradle/tests/: CMakeLists.txt  common.cpp  date_time.cpp  encoding.cpp  endian.cpp  memory_cache.cpp  multithreading.cpp  pooled_list.cpp
cradle/tests/geometry/: angle.cpp  bounding_box.cpp  common.cpp  decode_matrix.cpp  distance.cpp  intersection.cpp  line_strip.cpp  polygonal.cpp  regular_grid.cpp  transformations.cpp
cradle/tests/imaging/: apply_palette.cpp  blend.cpp  bounds.cpp  difference.cpp  discretize.cpp  gaussian_blur.cpp  geometry.cpp  histogram.cpp  histogram_equalize.cpp  integral.cpp  isobands.cpp  isolines.cpp  level_window.cpp  merge_slices.cpp  sample.cpp  slicing.cpp  statistics.cpp  variant.cpp  view_transforms.cpp  weighting.cpp
cradle/tests/io/: compression.cpp  config_file.cpp  generic_io.cpp  standard_image_io.cpp
cradle/tests/math/: common.cpp  fixed.cpp  interpolate.cpp
gui_demo/: CMakeLists.txt  alia.style  config.txt  gui_demo.cpp
gui_demo/src/: astroid.rc  resource.h
gui_demo/src/gui_demo/: common.hpp  demo_task.cpp  demo_task.hpp  demo_task_state.hpp  forward.hpp  registry.cpp  registry.hpp  utilities.cpp  utilities.hpp
gui_demo/src/gui_demo/demos/: containers.cpp  layout.cpp  timing.cpp  tutorial.cpp  widgets.cpp
scripts/: clone_gui_test.bat  (+8 more)
visualization/: CMakeLists.txt
visualization/src/visualization/: common.hpp  release.hpp
visualization/src/visualization/data/: utilities.cpp  utilities.hpp
visualization/src/visualization/ui/: common.hpp  inspection.cpp  inspection.hpp
(+84 files in other folders)
